feat(serviceaccount): integrate service account
