# pkg/types/dashboardtypes/dashboard.go
@@ -284,15 +284,15 @@ func (dashboard *Dashboard) Update(ctx context.Context, updatableDashboard Updat
 	return nil
 }
 
-func (dashboard *Dashboard) CanLockUnlock(role types.Role, updatedBy string) error {
-	if dashboard.CreatedBy != updatedBy && role != types.RoleAdmin {
+func (dashboard *Dashboard) CanLockUnlock(isAdmin bool, updatedBy string) error {
+	if dashboard.CreatedBy != updatedBy && !isAdmin {
 		return errors.Newf(errors.TypeForbidden, errors.CodeForbidden, "you are not authorized to lock/unlock this dashboard")
 	}
 	return nil
 }
 
-func (dashboard *Dashboard) LockUnlock(lock bool, role types.Role, updatedBy string) error {
-	err := dashboard.CanLockUnlock(role, updatedBy)
+func (dashboard *Dashboard) LockUnlock(lock bool, isAdmin bool, updatedBy string) error {
+	err := dashboard.CanLockUnlock(isAdmin, updatedBy)
 	if err != nil {
 		return err
 	}
